# fulltext-search

./: pyproject.toml
data/: data.py  data.xml
search/: app.py  data.py  document.py  index.py  load.py  main.py  playground.py  tokenizer.py
tests/: test_search.py
