[tool.poetry]
name = "search"
version = "0.1.0"
description = ""
authors = ["Ahmed Al-Dulimi <ahmed.aldulimi@student.unimelb.edu.au>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.27.1"
selectolax = "^0.3.7"
aiohttp = "^3.8.1"
httpx = "^0.22.0"
aiodns = "^3.0.0"
PyStemmer = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
